--- a/app_SuperGestao/public/css/estilo_basico.css
+++ b/app_SuperGestao/public/css/estilo_basico.css
@@ -152,6 +152,12 @@ button:hover {
     margin-bottom: 100px;
 }
 
+.conteudo-pagina-pos-contato {
+    width: 100%;
+    height: 60%;
+    text-align: center;
+}
+
 .titulo-pagina {
     padding: 100px 0px 60px 0px;
     background-color: #2a9ee2;
