--- a/Teste/project/resources/css/app.css
+++ b/Teste/project/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.border-gray-300 {
+    border-color: none;
+}
+
+.bg-gray-400{
+    border: 1px solid #000;
+}
